# gitbot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
docs/: triggers.md
gitbot/: activity.py  admin.html  brain.py  claude_ci.py  config.py  context.py  engine_sdk.py  gitlab_client.py  handlers.py  llm.py  locks.py  models.py  prompts.py  router.py  server.py  state.py  todos.py  tools.py
scripts/: run_dev.sh  run_test_suite.py  test_cleanup.py  test_dry_run.py  test_webhook.py
tests/: test_claude_ci.py  test_comment_triggers.py  test_config_layering.py  test_deep_audit.py  test_escalation.py  test_group_hooks.py  test_model_footer.py  test_redaction.py  test_routing.py  test_sdk_resume.py  test_shell_policy.py
tests/integration/: test_live_workflows.py
