[project]
name = "gitbot"
version = "0.1.0"
description = "GitBot — a Claude-powered agent that works as a GitLab team member"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-gitlab>=5.0",
    "anthropic>=0.45",
    "claude-agent-sdk>=0.2.97",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
